Fixing form spacing

--- a/client/my-sites/site-settings/analytics/style.scss
+++ b/client/my-sites/site-settings/analytics/style.scss
@@ -31,3 +31,6 @@
 .site-settings__analytics-spacer {
 	margin-bottom: 16px;
 }
+.site-settings__analytics-form-content {
+	margin-top: 24px;
+}
